DevOrg/src/objects/ACHCredentials__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocID__c</fullName>
        <label>LocID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companyKey__c</fullName>
        <label>companyKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>company__c</fullName>
        <label>company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sss__c</fullName>
        <label>sss</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>ACH Credentials</label>
</CustomObject>